welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:5: error: ')' expected but 'return' found.
  	return 5
        ^redTicket:6: error: ';' expected but 'if' found.
  if (a != b  && a != c)
  ^